--- a/Home Page/Home.html
+++ b/Home Page/Home.html
@@ -35,7 +35,7 @@
   </div> 
 </div>
 </header>
-<img src=map.jpg align="right">
+  <a href="https://nyks.nic.in/Gmap/gmap3.aspx"><img src=map.jpg align="right"></a>
 <center><h3>NYKS</h3></center>
 <center><p><i>Welcome to the home page</i></p></center>
 <div class="footer">
