--- a/Home Page/Home.html
+++ b/Home Page/Home.html
@@ -11,6 +11,7 @@
 </div>
 
 <div class="navbar">
+  
   <a href="#home">Home</a>
   
   <div class="dropdown">
@@ -33,16 +34,37 @@
       <a href="#">Log In</a>
     </div>
   </div> 
+  <div class="Head">Attendance Web App</div>
 </div>
 </header>
+
+<div class="map">
   <a href="https://nyks.nic.in/Gmap/gmap3.aspx"><img src=map.jpg align="right"></a>
-<center><h3>NYKS</h3></center>
-<center><p><i>Welcome to the home page</i></p></center>
+  </div>
+
+  
+    <center><h2><i>Welcome</i></h2></center>
+    
+
+<div class="instruction">
+  <center>
+<b><i>INSTRUCTIONS</i></b>
+</center><br>
+
+  <b><center>New Admin :</b> Go to Admin and select Sign In</center>
+  <b><center>Existing Admin :</b> Go to Admin and select Log In</center>
+  <b><center>New User :</b> Go to User and select Sign In</center>
+  <b><center>Existing User :</b> Go to User and select Log In</center>
+  </div >
+
+
 <div class="footer">
 
   <div class="copyright">
     <p>Copyright &copy; 2020 RuntimeTerror</p>
   </div>
+
+
   <div class="icons">
   <p style="text-align:center">
     <!--Facebook icon-->
@@ -55,6 +77,7 @@
     <a href="#" target="_blank"><img alt="" src="Linkedin.png" /> </a>
     </p>
 </div>
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
