--- a/Home Page/Home.html
+++ b/Home Page/Home.html
@@ -6,12 +6,15 @@
 </head>
 <body>
 <header>
-<div class="image">
-  <img src=logo.jpg align="left">
-</div>
+
 
 <div class="navbar">
-  
+  <div class="image">
+    <img src=logo.jpg align="left">
+  </div>
+
+ <! home button >
+
   <a href="#home">Home</a>
   
   <div class="dropdown">
@@ -24,7 +27,9 @@
     </div>
   </div> 
 
-  
+  <! Admin button >
+
+
   <div class="dropdown">
     <button class="dropbtn">Admin
       <i class="fa fa-caret-down"></i>
@@ -35,6 +40,9 @@
     </div>
   </div> 
   <div class="Head">Attendance Web App</div>
+  
+ 
+
 </div>
 </header>
 
@@ -57,8 +65,19 @@
   <b><center>Existing User :</b> Go to User and select Log In</center>
   </div >
 
+  <! Dark mode toggle button >
+  
+  <div classname="toggle">
+ 
+  <br><center> <button onclick="myFunction()">Toggle dark mode</button> </center> 
+
+  </div>
+
+  <! Footer>
 
 <div class="footer">
+  
+  <! Copyright>
 
   <div class="copyright">
     <p>Copyright &copy; 2020 RuntimeTerror</p>
@@ -82,6 +101,13 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/scripts.min.js"></script>
-</body>
+
+<script>
+  function myFunction() {
+     var element = document.body;
+     element.classList.toggle("dark-mode");
+  }
+  </script>
+
 </body>
 </html>
