--- a/Home Page/Home.html
+++ b/Home Page/Home.html
@@ -35,7 +35,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Sign In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/NYKS%20layout/Admin%20first%20time/admin%20s.htm">Sign In</a>
       <a href="#">Log In</a>
     </div>
   </div> 
