Update and rename home main.html to User First Time.html

--- a/User first/User First Time.html
+++ b/User first/User First Time.html
@@ -15,15 +15,16 @@
 
  <! home button >
 
-  <a href="#home">Home</a>
+  <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Home%20Page/Home.html">Home</a>
   
+  <! User>
   <div class="dropdown">
     <button class="dropbtn">User
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Sign In</a>
-      <a href="#">Log In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/User%20First%20Time%20Sign%20in/UserFirst.html">Sign In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/User%20Log%20in/Existing%20user%20sign%20in.html">Log In</a>
     </div>
   </div> 
 
@@ -35,8 +36,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/NYKS%20layout/Admin%20first%20time/admin%20s.htm">Sign In</a>
-      <a href="#">Log In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Admin%20first%20time/admin%20s.htm">Sign In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Admin%20log%20in/Existing%20admin%20sign%20in.html">Log In</a>
     </div>
   </div> 
   <div class="Head">Attendance Web App</div>
@@ -50,50 +51,50 @@
   </div>
 
   
-  <center><h2><b><font type=Modern No. 20 size="7" >USER FIRST TIME SIGN IN</font></b></h2></center>
+  <center><h2><b><font type=Modern No. 20 size="6" >USER FIRST TIME SIGN IN</font></b></h2></center>
     
 <br>
 <center>
 <form method="post" name="form">
 <table>
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>NAME:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>NAME:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="nam"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>EMAIL ID:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>EMAIL ID:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="ema"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>USER NAME:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>USER NAME:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="use"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>OFFICE LOCATION:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>OFFICE LOCATION:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="off"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>CONFIRM OFFICE LOCATION:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>CONFIRM OFFICE LOCATION:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="offi"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>PASSWORD:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>PASSWORD:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="pas"></td>
  
  </tr>
 
 <tr>
-  <td><font type=Modern No. 20 size="5" ><u><br>CONFIRM PASSWORD:</u></font></td>
+  <td><font type=Modern No. 20 size="4" ><u><br>CONFIRM PASSWORD:</u></font></td>
   <td><br><input type="text box" size="16" maxlength="16" name="con"></td>
  
  </tr>
@@ -104,7 +105,7 @@
 
 <font face="courier" size="3" color="red">
 *Please take care that everything is filled out correctly then click "Sign In"
-<br><br><br><br>
+<br><br>
 </center>
 <center><input type="submit" name="sbmt"  value="Sign In" OnClick="order()"></center>
 
@@ -118,6 +119,7 @@
   <br><center> <button onclick="myFunction()">Toggle dark mode</button> </center> 
 
   </div>
+  <br><br><br><br><br><br>
 
   <! Footer>
 
