--- a/Admin Logged in/Admin after Log in.html
+++ b/Admin Logged in/Admin after Log in.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Admin Main page after log in</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Style.css">
 </head>
