--- a/Home Page/Home.html
+++ b/Home Page/Home.html
@@ -15,15 +15,17 @@
 
  <! home button >
 
-  <a href="#home">Home</a>
+  <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Home%20Page/Home.html">Home</a>
   
+
+  <! User>
   <div class="dropdown">
     <button class="dropbtn">User
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Sign In</a>
-      <a href="#">Log In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/User%20First%20Time%20Sign%20in/UserFirst.html">Sign In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/User%20Log%20in/Existing%20user%20sign%20in.html">Log In</a>
     </div>
   </div> 
 
@@ -35,8 +37,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/NYKS%20layout/Admin%20first%20time/admin%20s.htm">Sign In</a>
-      <a href="#">Log In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Admin%20first%20time/admin%20s.htm">Sign In</a>
+      <a href="file:///C:/Users/Sayan/Desktop/Dev/Run%20time%20Terror/SIH--Attendance-Web-App-master/Admin%20log%20in/Existing%20admin%20sign%20in.html">Log In</a>
     </div>
   </div> 
   <div class="Head">Attendance Web App</div>
